--- a/css/style.css
+++ b/css/style.css
@@ -46,3 +46,14 @@ h1 {
     color: white;
     padding: 10px 15px;
 }
+
+.close-button {
+    cursor: pointer;
+    border: none;
+    color: white;
+    background: transparent;
+    font-size: 20px;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+}
